# Secure-GPG-QR-Manager

./: Cargo.toml  README.md
src/: cli.rs  error.rs  gpg_ops.rs  main.rs  qr_utils.rs  web_handlers.rs  web_server.rs
static/: script.js  styles.css
templates/: index.html
