[package]
name = "secure_gpg_qr"
version = "0.1.0"
edition = "2021"

[dependencies]
# CLI
clap = { version = "4.4", features = ["derive"] }

# GPG Interaction
gpgme = "0.11" # Check for latest compatible version

# Web Server
tokio = { version = "1", features = ["full"] }
axum = "0.7" # Check for latest compatible version
tower-http = { version = "0.5", features = ["fs", "trace"] }
hyper = { version = "1", features = ["server", "http1"] } # Or http2 if needed

# Templating
askama = { version = "0.12", features = ["with-axum"] }
askama_axum = "0.4"

# QR Code Generation
qrcodegen = "1.8"
base64 = "0.21" # For embedding QR image data

# Error Handling
anyhow = "1.0"
thiserror = "1.0"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Security
zeroize = { version = "1.7", features = ["alloc"] }

# Utilities
rand = "0.8"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
lazy_static = "1.4" # For global GPG context potentially
parking_lot = "0.12" # For efficient locking if needed

# Optional: For embedding static assets
# rust-embed = "8.0"
